# authorization-app

./: README.md  auth.db  main.py  pyproject.toml  requirements.txt
app/: constants.py  database.py  databases.py  jwt_functions.py  main.py  models.py  routes.py  settings.py  utils.py
help/: Запуск Poetry.canvas  запуск Django.md
static/js/: index.js  test.js
templates/: index.html  test.html
tests/: test_routes.py  utils_t.py
