[project]
name = "authorization-service"
version = "0.1.0"
description = "Веб-сервис авторизации"
authors = [
    {name = "VitArsl"}
]
license = {text = "none at the moment"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.7,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "bcrypt (>=4.2.1,<5.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "pytz (>=2025.1,<2026.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
