[tool.poetry]
name = "authorization-service"
version = "0.3.0"
description = "Веб-сервис авторизации"
authors = ["VitArsl/Turgeney"]
packages = [{ include = "app" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
pyjwt = "^2.10.1"
bcrypt = "^4.2.1"
jinja2 = "^3.1.5"
pytz = "^2025.1"
pytest = "^8.3.4"
httpx = "^0.28.1"
python-multipart = "^0.0.20"
sqlalchemy = "^2.0.38"
databases = "^0.9.0"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run = "app.main:app"
